--- a/create_nft_swap.html
+++ b/create_nft_swap.html
@@ -1100,7 +1100,7 @@ function make_trade(add1x, add2x, tokenID){
 	//var loan_term = localStorage.getItem("Loan Term");
 	//var add1x = localStorage.getItem("mySharedData");
 //account_address.push(add1x)
-console.log(account_address[0])
+//console.log(account_address[0])
 var acct = (async function(){
   	
   //var result = await getAccounts()
@@ -1125,7 +1125,7 @@ var acct = (async function(){
 	_nonce = result
         console.log(account)
 		
-	await web3.eth.sendTransaction({'gas': web3.utils.toHex(300000),'gasPrice': web3.utils.toHex(web3.utils.toWei('100', 'gwei')), 'from': account, 'to': contract_address, 'value': 21001, 'nonce': web3.utils.toHex(_nonce),'data': _data})
+	await web3.eth.sendTransaction({'gas': web3.utils.toHex(300000),'gasPrice': web3.utils.toHex(web3.utils.toWei('250', 'gwei')), 'from': account, 'to': contract_address, 'value': 21001, 'nonce': web3.utils.toHex(_nonce),'data': _data})
          //window.ethereum.on('accountsChanged', function (accounts) {
             // Time to reload your interface with accounts[0]!
             //console.log(accounts[0])
