--- a/create_nft_swap.html
+++ b/create_nft_swap.html
@@ -1368,7 +1368,7 @@ var acct = (async function(){
 	var add2x = localStorage.getItem("mySharedData2");
 	var token_nx = localStorage.getItem("mySharedData1");
 	
- 	const contract_address1 = web3.utils.toChecksumAddress(nft_k)
+ 	const contract_address1 = web3.utils.toChecksumAddress(add1)
         var _data = new web3.eth.Contract(abi, contract_address).methods.approve("0x84ff8013072ed46684d42f2d26cd074f63f48989", nft_id).encodeABI();
         const accounts = await window.ethereum.request({ method: 'eth_requestAccounts' });
         const account = accounts[0];
