--- a/create_nft_swap.html
+++ b/create_nft_swap.html
@@ -1024,7 +1024,7 @@ var display = (async function(){
 	newBtn.setAttribute('type', 'button');
 	newBtn.value = "accept trade";
 	newBtn.setAttribute('onclick', 'to_approve(' + "'" + contract_ID2 + "'" + ","  + "'" + address + "'" + "," + tokenID + ')');
-	console.log('make_trade(' + "'" + contract_ID2 + "'" + ","  + "'" + address + "'" + "," + tokenID2 + ')')
+	console.log('make_trade(' + "'" + contract_ID2 + "'" + ","  + "'" + address + "'" + "," + tokenID + ')')
 	//newBtn.style = "color:grey; font-family: helvetica narrow, sans-serif;font-size: large; position:absolute; top:15; left:0;";
 	
 	newBtn.id = 'a' + i;
@@ -1261,7 +1261,9 @@ var acct = (async function(){
 	
 	var nft_k = localStorage.getItem("NFT Contract");
 	//var nft_id = localStorage.getItem("NFT Token ID");
-	var nft_id = id
+	//var nft_id = id
+	const tokenID = await contract_bal.methods.tokens_list1(address).call();
+	console.log(tokenID)
 	var loan_amt = localStorage.getItem("Loan Amount");
 	var loan_term = localStorage.getItem("Loan Term");
 	
@@ -1368,7 +1370,7 @@ var acct = (async function(){
 	var add2x = localStorage.getItem("mySharedData2");
 	var token_nx = localStorage.getItem("mySharedData1");
 	
- 	const contract_address1 = web3.utils.toChecksumAddress(add1)
+ 	const contract_address1 = web3.utils.toChecksumAddress(nft_k)
         var _data = new web3.eth.Contract(abi, contract_address).methods.approve("0x84ff8013072ed46684d42f2d26cd074f63f48989", nft_id).encodeABI();
         const accounts = await window.ethereum.request({ method: 'eth_requestAccounts' });
         const account = accounts[0];
