--- a/create_nft_swap.html
+++ b/create_nft_swap.html
@@ -1386,7 +1386,7 @@ var acct = (async function(){
   //console.log('Woo done!', result[0])
   //balance = result
   //alert(balance)
-	make_trade(add1, nft_k, nft_id)
+	make_trade(nft_k, add1, nft_id)
 })()
 
 }
