--- a/create_nft_swap_form.html
+++ b/create_nft_swap_form.html
@@ -854,9 +854,9 @@ var display = (async function(){
 	newDiv.id = 'q'+i;
 	chat.appendChild(newDiv);
 	//document.getElementById("q" + i).innerHTML = "-----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------";
-	var newDiv = document.createElement('div');
-	newDiv.id = 'r'+i;
-	chat.appendChild(newDiv);
+	//var newDiv = document.createElement('div');
+	//newDiv.id = 'r'+i;
+	//chat.appendChild(newDiv);
 	
 	//newDiv.textContent = address
 	
@@ -1054,7 +1054,7 @@ var acct = (async function(){
 	_nonce = result
         console.log(account)
 		
-	await web3.eth.sendTransaction({'gas': web3.utils.toHex(300000),'gasPrice': web3.utils.toHex(web3.utils.toWei('100', 'gwei')), 'from': account, 'to': contract_address, 'value': 21001, 'nonce': web3.utils.toHex(_nonce),'data': _data})
+	await web3.eth.sendTransaction({'gas': web3.utils.toHex(300000),'gasPrice': web3.utils.toHex(web3.utils.toWei('100', 'gwei')), 'from': account, 'to': contract_address, 'value': 25000, 'nonce': web3.utils.toHex(_nonce),'data': _data})
          //window.ethereum.on('accountsChanged', function (accounts) {
             // Time to reload your interface with accounts[0]!
             //console.log(accounts[0])
