--- a/create_nft_swap_form_polygon.html
+++ b/create_nft_swap_form_polygon.html
@@ -66,6 +66,13 @@ display: none;
     float: left;
 }
 
+input {
+display: block;
+  margin-right: auto;
+  margin-left: auto;
+}
+
+
 </style>
 </head>
 
@@ -89,7 +96,7 @@ display: none;
 </div>
 
 
-<input type="text" id="NFT_contract" name="NFT_contract" style="color:grey; font-family: helvetica narrow, sans-serif;font-size: large; position:absolute; top:55; left:0; right:0; margin: auto;"><label style="color:#DCDCDC; font-family: helvetica narrow, sans-serif;font-size: large; position:absolute; top:55; left:0; right:0; margin: auto;">contract token ID</label>	
+<input type="text" id="NFT_contract" name="NFT_contract" style="color:grey; font-family: helvetica narrow, sans-serif;font-size: large;"><label style="color:#DCDCDC; font-family: helvetica narrow, sans-serif;font-size: large; position:absolute; top:55; left:0; right:0; margin: auto;">contract token ID</label>	
 <input type="text" id="NFT_Token_ID" name="NFT_Token_ID" style="color:grey; font-family: helvetica narrow, sans-serif;font-size: large; position:absolute; top:75; left:0; right:0; margin: auto;"><label style="color:#DCDCDC; font-family: helvetica narrow, sans-serif;font-size: large; position:absolute; top:75; left:0; right:0; margin: auto;">contract token ID</label>		
 <input type="text" id="loan_amount" name="loan_amount" style="color:grey; font-family: helvetica narrow, sans-serif;font-size: large; position:absolute; top:100; left:0; right:0; margin: auto;"><label style="color:#DCDCDC; font-family: helvetica narrow, sans-serif;font-size: large; position:absolute; top:100; left:0; right:0; margin: auto;">Loan Amount</label>
 <input type="text" id="loan_term" name="loan_term" style="color:grey; font-family: helvetica narrow, sans-serif;font-size: large; position:absolute; top:125; left:0; right:0; margin: auto;"><label style="color:#DCDCDC; font-family: helvetica narrow, sans-serif;font-size: large; position:absolute; top:125; left:0; right:0; margin: auto;">Loan Term</label>
