--- a/create_nft_swap_form_polygon.html
+++ b/create_nft_swap_form_polygon.html
@@ -66,11 +66,20 @@ display: none;
     float: left;
 }
 
-input your-nft {
+.your-nft {
 display: block;
 
   border-radius: 15px;
   top:200;
+  margin-right: auto;
+  margin-left: auto;
+}
+
+.their-nft {
+display: block;
+
+  border-radius: 15px;
+  top:600;
   margin-right: auto;
   margin-left: auto;
 }
