--- a/create_nft_swap_form_polygon.html
+++ b/create_nft_swap_form_polygon.html
@@ -66,7 +66,7 @@ display: none;
     float: left;
 }
 
-.your-nft {
+input.your-nft {
 display: block;
 
   border-radius: 15px;
@@ -75,7 +75,7 @@ display: block;
   margin-left: auto;
 }
 
-.their-nft {
+input.their-nft {
 display: block;
 
   border-radius: 15px;
