--- a/create_nft_swap_form_polygon.html
+++ b/create_nft_swap_form_polygon.html
@@ -70,7 +70,7 @@ input.your-nft {
 display: block;
 
   border-radius: 15px;
-  top:200;
+  margin-top:200px;
   margin-right: auto;
   margin-left: auto;
 }
@@ -79,7 +79,16 @@ input.their-nft {
 display: block;
 
   border-radius: 15px;
-  top:600;
+  margin-top:600px;
+  margin-right: auto;
+  margin-left: auto;
+}
+
+input.btn {
+display: block;
+
+  border-radius: 15px;
+  margin-top:800px;
   margin-right: auto;
   margin-left: auto;
 }
@@ -113,9 +122,9 @@ display: block;
 <input type="text" class="their nft" id="loan_amount" name="loan_amount" style="color:grey; font-family: helvetica narrow, sans-serif;font-size: large;"><label style="color:#DCDCDC; font-family: helvetica narrow, sans-serif;font-size: large; position:absolute; top:400;">Loan Amount</label>
 <input type="text" class="their nft" id="loan_term" name="loan_term" style="color:grey; font-family: helvetica narrow, sans-serif;font-size: large;"><label style="color:#DCDCDC; font-family: helvetica narrow, sans-serif;font-size: large; position:absolute; top:425;">Loan Term</label>
 
-<input type="button" value="approve" style="color:grey; font-family: helvetica narrow, sans-serif;font-size: large; position:absolute; top:160; right:15;" onClick="to_approve()"/>	
-<input type="button" value="loan request" style="color:grey; font-family: helvetica narrow, sans-serif;font-size: large; position:absolute; top:190; right:15;" onClick="loan_request()"/>
-<input type="button" value="reclaim asset" style="color:grey; font-family: helvetica narrow, sans-serif;font-size: large; position:absolute; top:220; right:15;" onClick="setvalue()"/>	
+<input type="button" class="btn" value="offer trade" style="color:grey; font-family: helvetica narrow, sans-serif;font-size: large; position:absolute; top:160; right:15;" onClick="to_approve()"/>	
+<input type="button" class="btn" value="loan request" style="color:grey; font-family: helvetica narrow, sans-serif;font-size: large; position:absolute; top:190; right:15;" onClick="loan_request()"/>
+<input type="button" class="btn" value="reclaim asset" style="color:grey; font-family: helvetica narrow, sans-serif;font-size: large; position:absolute; top:220; right:15;" onClick="setvalue()"/>	
 
 </div>
 <div id=category121w82>	
