--- a/create_nft_swap_form_polygon.html
+++ b/create_nft_swap_form_polygon.html
@@ -70,7 +70,16 @@ input.your-nft {
 display: block;
 
   border-radius: 15px;
-  margin-top:75px;
+  margin-top:200px;
+  margin-right: auto;
+  margin-left: auto;
+}
+
+input.your-nft1 {
+display: block;
+
+  border-radius: 15px;
+  margin-top:200px;
   margin-right: auto;
   margin-left: auto;
 }
@@ -79,7 +88,7 @@ input.their-nft {
 display: block;
 
   border-radius: 15px;
-  margin-top:225px;
+  margin-top:400px;
   margin-right: auto;
   margin-left: auto;
 }
@@ -88,7 +97,7 @@ input.btn {
 display: block;
 
   border-radius: 15px;
-  margin-top:300px;
+  margin-top:425px;
   margin-right: auto;
   margin-left: auto;
 }
@@ -118,9 +127,11 @@ display: block;
 
 
 <input type="text" class="your-nft" id="NFT_contract" name="NFT_contract" style="color:grey; font-family: helvetica narrow, sans-serif;font-size: large;"><label style="color:#DCDCDC; font-family: helvetica narrow, sans-serif;font-size: large; position:absolute; top:200;">contract token ID</label>	
-<input type="text" class="your-nft" id="NFT_Token_ID" name="NFT_Token_ID" style="color:grey; font-family: helvetica narrow, sans-serif;font-size: large;"><label style="color:#DCDCDC; font-family: helvetica narrow, sans-serif;font-size: large; position:absolute; top:225;">contract token ID</label>		
+<input type="text" class="your-nft1" id="NFT_Token_ID" name="NFT_Token_ID" style="color:grey; font-family: helvetica narrow, sans-serif;font-size: large;"><label style="color:#DCDCDC; font-family: helvetica narrow, sans-serif;font-size: large; position:absolute; top:225;">contract token ID</label>		
+
+
 <input type="text" class="their-nft" id="loan_amount" name="loan_amount" style="color:grey; font-family: helvetica narrow, sans-serif;font-size: large;"><label style="color:#DCDCDC; font-family: helvetica narrow, sans-serif;font-size: large; position:absolute; top:400;">Loan Amount</label>
-<input type="text" class="their-nft" id="loan_term" name="loan_term" style="color:grey; font-family: helvetica narrow, sans-serif;font-size: large;"><label style="color:#DCDCDC; font-family: helvetica narrow, sans-serif;font-size: large; position:absolute; top:425;">Loan Term</label>
+<input type="text" class="their-nft1" id="loan_term" name="loan_term" style="color:grey; font-family: helvetica narrow, sans-serif;font-size: large;"><label style="color:#DCDCDC; font-family: helvetica narrow, sans-serif;font-size: large; position:absolute; top:425;">Loan Term</label>
 
 <input type="button" class="btn" value="offer trade" style="color:grey; font-family: helvetica narrow, sans-serif;font-size: large; position:absolute; top:160; right:15;" onClick="to_approve()"/>	
 <input type="button" class="btn" value="loan request" style="color:grey; font-family: helvetica narrow, sans-serif;font-size: large; position:absolute; top:190; right:15;" onClick="loan_request()"/>
