--- a/create_nft_swap_form_polygon.html
+++ b/create_nft_swap_form_polygon.html
@@ -79,7 +79,7 @@ input.your-nft1 {
 display: block;
 
   border-radius: 15px;
-  margin-top:5px;
+  margin-top:1px;
   margin-right: auto;
   margin-left: auto;
 }
@@ -88,7 +88,7 @@ input.their-nft {
 display: block;
 
   border-radius: 15px;
-  margin-top:250px;
+  margin-top:50px;
   margin-right: auto;
   margin-left: auto;
 }
@@ -97,7 +97,7 @@ input.their-nft1 {
 display: block;
 
   border-radius: 15px;
-  margin-top:5px;
+  margin-top:1px;
   margin-right: auto;
   margin-left: auto;
 }
@@ -106,7 +106,7 @@ input.btn {
 display: block;
 
   border-radius: 15px;
-  margin-top:425px;
+  margin-top:5px;
   margin-right: auto;
   margin-left: auto;
 }
@@ -142,7 +142,7 @@ display: block;
 <input type="text" class="their-nft" id="NFT_contract2" name="NFT_contract2" style="color:grey; font-family: helvetica narrow, sans-serif;font-size: large;"><label style="color:#DCDCDC; font-family: helvetica narrow, sans-serif;font-size: large; position:absolute; top:400;">Loan Amount</label>
 <input type="text" class="their-nft1" id="NFT_Token_ID2" name="NFT_Token_ID2" style="color:grey; font-family: helvetica narrow, sans-serif;font-size: large;"><label style="color:#DCDCDC; font-family: helvetica narrow, sans-serif;font-size: large; position:absolute; top:425;">Loan Term</label>
 
-<input type="button" class="btn" value="offer trade" style="color:grey; font-family: helvetica narrow, sans-serif;font-size: large; position:absolute; top:160; right:15;" onClick="to_approve()"/>	
+<input type="button" class="btn" value="offer trade" style="color:grey; font-family: helvetica narrow, sans-serif;font-size: large;" onClick="to_approve()"/>	
 <input type="button" class="btn" value="loan request" style="color:grey; font-family: helvetica narrow, sans-serif;font-size: large; position:absolute; top:190; right:15;" onClick="loan_request()"/>
 <input type="button" class="btn" value="reclaim asset" style="color:grey; font-family: helvetica narrow, sans-serif;font-size: large; position:absolute; top:220; right:15;" onClick="setvalue()"/>	
 
