--- a/create_nft_swap_form_polygon.html
+++ b/create_nft_swap_form_polygon.html
@@ -68,7 +68,7 @@ display: none;
 
 input.your-nft {
 display: block;
-
+  size: 50
   border-radius: 15px;
   margin-top:200px;
   margin-right: auto;
@@ -77,7 +77,7 @@ display: block;
 
 input.your-nft1 {
 display: block;
-
+  size: 50
   border-radius: 15px;
   margin-top:1px;
   margin-right: auto;
@@ -86,7 +86,7 @@ display: block;
 
 input.their-nft {
 display: block;
-
+  size: 50
   border-radius: 15px;
   margin-top:50px;
   margin-right: auto;
@@ -95,7 +95,7 @@ display: block;
 
 input.their-nft1 {
 display: block;
-
+  size: 50
   border-radius: 15px;
   margin-top:1px;
   margin-right: auto;
@@ -104,7 +104,7 @@ display: block;
 
 input.btn {
 display: block;
-
+  size: 50
   border-radius: 15px;
   margin-top:5px;
   margin-right: auto;
